# online-voting

./: Cargo.toml  README.md  digest.txt
src/: error.rs  main.rs
src/core/: election.rs  mod.rs  zkproof.rs
src/crypto/: commitment.rs  mod.rs
src/models/: ballot.rs  election.rs  mod.rs  voter.rs
src/services/: voting.rs
src/shared/: ballot.rs  commitment.rs  mod.rs
voting-client-cli/: Cargo.toml
voting-client-cli/src/: main.rs
voting-core/: Cargo.toml
voting-core/src/: error.rs  lib.rs
voting-core/src/crypto/: commitment.rs  elgamal.rs  mod.rs  parameters.rs
voting-core/src/models/: ballot.rs  election.rs  voter.rs
voting-core/src/services/: voting.rs
voting-core/tests/: crypto_test.rs  election_test.rs
voting-server/: Cargo.toml
voting-server/src/: main.rs
